# gabac

./: .gitignore  .travis.yml  AUTHORS  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  USAGE_POLICY.md  build.sh  test-roundtrips.sh
ci/: test-roundtrips.sh  test_gabac.sh  test_python_api.sh  test_roundtrips.sh
docs/: MarkdownFile.md  c_interface_example.md  doxyfile.in
plots/: gabac-block-diagram.pptx
plots/compression-results/: plot-results-by-stream.R  plot-summarized-results.R
plots/compression-results/plot-results-by-stream-input/: cram-ERR17431.csv  cram-ERR17431.ods  cram-NA12878.csv  cram-NA12878.ods  deez-ERR17431.csv  deez-ERR17431.ods  deez-NA12878.csv  deez-NA12878.ods
plots/compression-results/plot-summarized-results-input/: cram.csv  deez.csv
plots/simulated-annealing-example/: plot.R  sample-2-10_sorted.bam_filtered.snpt.cropped_RLE.csv
resources/: c_interface_example.c
resources/configuration_files/: equality_coding.json  match_coding.json  rle_coding.json
resources/input_files/: one_mebibyte_random.0.lut.tmp  one_mebibyte_random.0.lutTransformed.tmp  one_mebibyte_random.eq.equalityFlags.tmp  one_mebibyte_random.eq.values.tmp  one_mebibyte_random.eq.values.tmp.1.lut.tmp  one_mebibyte_random.eq.values.tmp.1.lutTransformed.tmp  one_mebibyte_random.gabac_bytestream  one_mebibyte_random.gabac_configuration.json  one_mebibyte_random.match.32.lengths.tmp  one_mebibyte_random.match.32.lengths.tmp.1.lutTransformed.tmp  one_mebibyte_random.match.32.pointers.tmp  one_mebibyte_random.match.32.pointers.tmp.0.lut.tmp  one_mebibyte_random.match.32.pointers.tmp.0.lutTransformed.tmp  one_mebibyte_random.match.32.values.tmp  one_mebibyte_random.match.32.values.tmp.2.lut.tmp  one_mebibyte_random.match.32.values.tmp.2.lutTransformed.tmp  one_mebibyte_random.rle.255.lengths.tmp  one_mebibyte_random.rle.255.values.tmp  one_mebibyte_random.rle.255.values.tmp.0.lut.tmp  one_mebibyte_random.rle.255.values.tmp.0.lutTransformed.tmp
resources/misc/: boilerplate.txt
scripts/: build.sh  download_external_tools.sh  git-release.sh  git_release.sh  perform_codec_comparison.sh  perform_codec_comparison_in_parallel.sh  run_style_checks.sh  run_unit_tests.sh  search_todos.sh  split&encode.sh
scripts/codec_comparison/: CRAM.csv  CRAM_and_DeeZ.csv  CRAM_streams_summary.csv  DeeZ.csv  DeeZ_streams_summary.csv  MPEG-G.csv  MPEG-G_CRAM_DeeZ_streams_summary.xlsx  plots.ipynb  run_codec_comparison.md
scripts/codec_comparison/results/: CRAM_and_DeeZ_streams_summary.csv  CRAM_and_DeeZ_total_metrics.csv  DeeZ_streams_summary.csv  MPEG-G.csv  MPEG-G_CRAM_DeeZ_streams_summary.xlsx  Master.xlsx
source/gabac/: CMakeLists.txt  analysis.cc  analysis.cpp  analysis.h  binary-arithmetic-decoder.cc  binary-arithmetic-decoder.h  binary-arithmetic-encoder.cc  binary-arithmetic-encoder.h  binary_arithmetic_decoder.cpp  binary_arithmetic_decoder.h  binary_arithmetic_encoder.cpp  binary_arithmetic_encoder.h  bit-input-stream.cc  bit-input-stream.h  bit-output-stream.cc  bit-output-stream.h  bit_input_stream.cpp  bit_input_stream.h  bit_output_stream.cpp  bit_output_stream.h  block-stepper.h  block_stepper.h  buffer_input_stream.cpp  buffer_input_stream.h  buffer_output_stream.cpp  buffer_output_stream.h  c-interface.cc  c-interface.h  c_interface.cpp  c_interface.h  cabac-tables.h  cabac_tables.h  configuration.cc  configuration.cpp  configuration.h  constants.cc  constants.cpp  constants.h  context-model.cc  context-model.h  (+78 more)
source/gabacify/: CMakeLists.txt  analysis.cpp  analysis.h  analyze.cc  analyze.cpp  analyze.h  code.cc  code.cpp  code.h  configuration.cpp  configuration.h  decode.cpp  decode.h  encode.cpp  encode.h  exceptions.cpp  exceptions.h  file.cpp  file.h  helpers.cpp  helpers.h  input_file.cpp  log.cpp  log.h  main.cpp  output_file.cpp  output_file.h  program-options.cc  program-options.h  program_options.cpp  program_options.h  tmp_file.cpp  tmp_file.h
source/python_api/: gabac.py  gabac_api.py  gabac_conf_gen.py  gabac_ga.py  gabac_sa.py  genetic_algo.py  hyperparameter_search.py  new_gabac.py  optimize_config.py  test_gabac_conf_gen.py  test_gabac_ga.py  test_gabac_sa.py  test_python_api.py
source/transformify/: exceptions.cpp  exceptions.h  file.cpp  file.h  helpers.cpp  helpers.h  input_file.cpp  input_file.h  log.cpp  log.h  main.cpp  output_file.cpp  output_file.h  program_options.cpp  program_options.h
src/: CMakeLists.txt
src/gabacify/: analyze.cc  analyze.h  code.cc  code.h  main.cc  program-options.cc
tests/: CMakeLists.txt
tests/gabac/: binary_arithmetic_decoder_test.cpp  bit_input_stream_test.cpp  bit_output_stream_test.cpp  core_test.cpp  diff_coding_test.cpp  equality_coding_test.cpp  lut_transform_test.cpp  match_coding_test.cpp  rle_coding_test.cpp  test_common.cpp  test_common.h
